--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p> Connect you phone to PC.</p>
     <p> Open Itunes for connection with iPhone.</p>
     <p> Open Scarlet.</p>
-    <p> Add repo from this url ' <a href="https://raw.githubusercontent.com/KailUser/CountJail/main/scarlet_repo.json">https://raw.githubusercontent.com/KailUser/CountJail/main/scarlet_repo.json</a> '</p>
+    <p> Add repo from this url ' <a href="https://kailuser.github.io/CountJail/scarlet_repo.json">https://kailuser.github.io/CountJail/scarlet_repo.json</a> '</p>
     <p> And add our software to you iPhone or iPad</p>
 </body>
 </html>
